Added comments in index.html and wrote 1st func in designs.js

--- a/index.html
+++ b/index.html
@@ -26,3 +26,13 @@
     <script src="designs.js"></script>
 </body>
 </html>
+
+<!-- 
+Here are the notes on this project which helps sorting out my thoughts:
+
+Steps:
+
+1. Listen when user enter width and height info, get width and height
+2. Make grid: get gird height and grid width, populate html table
+
+ -->
