--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="1">
+        <input type="number" id="inputHeight" name="height" min="1" value="3">
         Grid Width:
-        <input type="number" id="inputWidth" name="width" min="1" value="1">
-        <input type="submit">
+        <input type="number" id="inputWidth" name="width" min="1" value="3">
+        <input type="button" id="submit_btn" value="Submit!">
     </form>
 
     <h2>Pick A Color</h2>
